<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BluePle"
    android:orientation="vertical"
    tools:context=".Fragment1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/MidNightBlue"
            android:orientation="vertical">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/pc"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/john_m_nasendi"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:text="@string/web_developer"
                android:textColor="#fff"
                android:textSize="15sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kampus"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/university_mulia"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/MidNightBlue"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jurusan"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/informatika_s1"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/MidNightBlue"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hobby"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/coding_eat_sleep"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/MidNightBlue"/>
                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="35dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/mail"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/jhonmaurits_universitasmulia_ac_id"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/instgram"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/johan_nasendi"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/twiiter"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/johannasendi"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>